force-app/main/default/objects/Lucky_Draw__c/Lucky_Draw__c.object-meta.xml
<CustomObject>
    <label>Lucky Draw</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Lucky Draw Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lucky Draws</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>