force-app/main/default/objects/Lucky_Draw__c/fields/Lottery_Draw__c.field-meta.xml
<CustomField>
    <fullName>Lottery_Draw__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lottery_Draw</label>
    <referenceTo>Lottery__c</referenceTo>
    <relationshipLabel>Lucky Draws</relationshipLabel>
    <relationshipName>Lucky_Draws</relationshipName>
    <type>Lookup</type>
</CustomField>