force-app/main/default/objects/Lucky_Draw__c/fields/Number_3__c.field-meta.xml
<CustomField>
    <fullName>Number_3__c</fullName>
    <label>Number 3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>