force-app/main/default/objects/Lucky_Draw__c/fields/Number_5__c.field-meta.xml
<CustomField>
    <fullName>Number_5__c</fullName>
    <label>Number 5</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>